--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "messagebird/php-rest-api": "^3.0"
+        "messagebird/php-rest-api": "^3.0",
+        "spatie/url": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
