Forcing redirect uri's

--- a/.env.testing
+++ b/.env.testing
@@ -51,8 +51,18 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# hmac key for patient hash generation function
 CODEGEN_HMAC_KEY=
+
+# Number of seconds before expiring authentication codes
 CODEGEN_EXPIRY=900
 
+
+# Api key for message bird text messaging
 SMS_GATEWAY_MESSAGEBIRD_API_KEY=
+
+# configuraiton file for oidc clients
 OIDC_CLIENT_CONFIG_JSON=clients.json
+
+# allowlist of redirects
+REDIRECT_URIS=localhost,127.0.0.1
