tmp commit of yenlo

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,11 @@ OIDC_CLIENT_CONFIG_JSON=clients.json
 # throttle form submissions
 THROTTLE_NUM_REQUESTS=3
 THROTTLE_PERIOD_MINUTES=10
+
+# allowlist of redirects
+REDIRECT_URIS=localhost,127.0.0.1
+
+# Client id/secret for yenlo oauth2
+YENLO_CLIENT_ID=
+YENLO_CLIENT_SECRET=
+YENLO_TOKEN_URL=
