fix: oidc flow (WIP)

--- a/.env.example
+++ b/.env.example
@@ -63,5 +63,6 @@ SMS_GATEWAY_MESSAGEBIRD_API_KEY=
 # configuraiton file for oidc clients
 OIDC_CLIENT_CONFIG_JSON=clients.json
 
-# allowlist of redirects
-REDIRECT_URIS=localhost,127.0.0.1
+# throttle form submissions
+THROTTLE_NUM_REQUESTS=3
+THROTTLE_PERIOD_MINUTES=10
