--- a/.github/workflows/ci-php.yml
+++ b/.github/workflows/ci-php.yml
@@ -49,6 +49,8 @@ jobs:
         run: cp .env.testing .env
       - name: Copy clients.json
         run: cp clients.json.example clients.json
+      - name: Generate JWT key
+        run: sh ./scripts/generate-jwt-key.sh
       - name: Generate _ide_helper file
         run: php artisan ide-helper:generate
       - name: Static analysis with Psalm
@@ -109,6 +111,8 @@ jobs:
         run: cp .env.testing .env
       - name: Copy clients.json
         run: cp clients.json.example clients.json
+      - name: Generate JWT key
+        run: sh ./scripts/generate-jwt-key.sh
       - name: Generate key
         run: php artisan key:generate --env=testing
       - name: Static analysis with PHPStan
@@ -137,6 +141,8 @@ jobs:
         run: cp .env.testing .env
       - name: Copy clients.json
         run: cp clients.json.example clients.json
+      - name: Generate JWT key
+        run: sh ./scripts/generate-jwt-key.sh
       - name: Check for known CVE vulnerabilities
         run: php artisan security-check:now
     strategy:
