Use YENLO_TOKEN_URL

--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,7 @@ REDIRECT_URIS=localhost,127.0.0.1
 YENLO_CLIENT_ID=
 YENLO_CLIENT_SECRET=
 YENLO_TOKEN_URL=
+YENLO_USERINFO_URL=
 
 # iss and aud in the JWT tokens back to coronacheck
 CORONACHECK_JWT_ISS=
