Added verification of yenlo data

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,9 @@ YENLO_USERINFO_URL=
 # iss and aud in the JWT tokens back to coronacheck
 CORONACHECK_JWT_ISS=
 CORONACHECK_JWT_AUD=
+
+# CMS signatures for yenlo
+CMS_SIGN_X509_CERT=
+CMS_SIGN_X509_KEY=
+CMS_SIGN_X509_PASS=
+CMS_SIGN_X509_CHAIN=
