--- a/.env.testing
+++ b/.env.testing
@@ -66,3 +66,8 @@ OIDC_CLIENT_CONFIG_JSON=clients.json
 
 # allowlist of redirects
 REDIRECT_URIS=localhost,127.0.0.1
+
+CMS_SIGN_X509_CERT=ssl/pap.localdev.cert
+CMS_SIGN_X509_KEY=ssl/pap.localdev.key
+CMS_SIGN_X509_PASS=
+CMS_SIGN_X509_CHAIN=
