--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.2",
         "laravel/tinker": "^2.7",
         "messagebird/php-rest-api": "^3.0",
+        "minvws/laravel-crypto": "^1.3",
         "spatie/url": "^2.1"
     },
     "require-dev": {
@@ -63,6 +64,9 @@
         }
     },
     "config": {
+        "platform": {
+            "php": "8.0.2"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
