fix: replace laravel-crypto with copy-pasted openssl -verify

--- a/.env.example
+++ b/.env.example
@@ -80,8 +80,6 @@ YENLO_USERINFO_URL=
 CORONACHECK_JWT_ISS=
 CORONACHECK_JWT_AUD=
 
-# CMS signatures for yenlo
-CMS_SIGN_X509_CERT=
-CMS_SIGN_X509_KEY=
-CMS_SIGN_X509_PASS=
-CMS_SIGN_X509_CHAIN=
+# Certs for verifying CMS signatures from yenlo (absolute paths)
+CMS_X509_CERT=
+CMS_X509_CHAIN=
