fix: configurable sms sender

--- a/.env.example
+++ b/.env.example
@@ -57,8 +57,9 @@ CODEGEN_HMAC_KEY=
 # Number of seconds before expiring authentication codes
 CODEGEN_EXPIRY=900
 
-# Api key for message bird text messaging
+# API key for message bird and SMS sender name
 SMS_GATEWAY_MESSAGEBIRD_API_KEY=
+SMS_GATEWAY_SENDER=
 
 # configuraiton file for oidc clients
 OIDC_CLIENT_CONFIG_JSON=clients.json
