--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,6 @@ CORONACHECK_JWT_AUD=
 # Certs for verifying CMS signatures from yenlo (absolute paths)
 CMS_X509_CERT=
 CMS_X509_CHAIN=
+
+# Must be set to either "yenlo" or "dummy"
+INFORETRIEVAL_SERVICE=yenlo
