Added expiry to json jwt token

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,8 @@ YENLO_USERINFO_URL=
 # iss and aud in the JWT tokens back to coronacheck
 CORONACHECK_JWT_ISS=
 CORONACHECK_JWT_AUD=
+# time in seconds before JWT expires
+CORONACHECK_JWT_EXP=3600
 
 # Certs for verifying CMS signatures from yenlo (absolute paths)
 CMS_X509_CERT=
