Added rate limiter for sms

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,7 @@ CODEGEN_EXPIRY=900
 # API key for message bird and SMS sender name
 SMS_GATEWAY_MESSAGEBIRD_API_KEY=
 SMS_GATEWAY_SENDER=
+SMS_GATEWAY_RATELIMIT=5
 
 # configuraiton file for oidc clients
 OIDC_CLIENT_CONFIG_JSON=clients.json
