chore: add dummy modes for SmsGateway and EmailGateway

--- a/.env.example
+++ b/.env.example
@@ -90,3 +90,7 @@ CMS_X509_CHAIN=
 
 # Must be set to either "yenlo" or "dummy"
 INFORETRIEVAL_SERVICE=yenlo
+# Must be set to either "native" or "dummy"
+EMAIL_SERVICE=native
+# Must be set to either "messagebird" or "dummy"
+SMS_SERVICE=messagebird
