chore: update docs

--- a/clients.json.example
+++ b/clients.json.example
@@ -1,15 +1,15 @@
 {
     "client-123": {
-        "name": "client A",
+        "name": "Client 123",
         "redirect_uris": [
-            "https://loopback.dev/",
+            "https://pap-demo-client.localdev:445/callback.html",
             "https://127.0.0.1/"
         ]
     },
     "client-456": {
-        "name": "client B",
+        "name": "Client 456",
         "redirect_uris": [
-            "https://loopback.dev/"
+            "https://pap-demo-client.localdev:445/callback.html",
         ]
     }
 }
