--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -9,6 +9,17 @@ on:
 jobs:
   composer-install:
     runs-on: ubuntu-20.04
+    services:
+      postgres:
+        image: postgres:12.5
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ci_db_test
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
@@ -47,16 +58,30 @@ jobs:
           php-version: ${{ matrix.php-versions }}
       - name: use .env.testing
         run: cp .env.testing .env
+      - name: Add variables to .env file
+        run: |
+          echo "INFORETRIEVAL_SERVICE=dummy" >> .env
+          echo "EMAIL_SERVICE=dummy" >> .env
+          echo "SMS_SERVICE=dummy" >> .env
+      - name: Fill postgres credentials
+        run: |
+          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=ci_db_test/g' .env
+          sed -i 's/DB_USERNAME=root/DB_USERNAME=postgres/g' .env
+          sed -i 's/DB_PASSWORD=/DB_PASSWORD=postgres/g' .env
       - name: Copy clients.json
         run: cp clients.json.example clients.json
       - name: Generate JWT key
         run: sh ./scripts/generate-jwt-key.sh
       - name: Generate SSl cert
         run: sh ./scripts/generate-certs.sh
-      # - name: Check for known CVE vulnerabilities
-        # run: php artisan security-check:now
+      - name: Gernerate keys
+        run: |
+          composer install
+          php artisan key:generate
+          npm install
+          npm run build
       - name: Start application
-        run: docker-compose up -d
+        run: php artisan serve &
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
