--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -58,16 +58,22 @@ jobs:
           php-version: ${{ matrix.php-versions }}
       - name: use .env.testing
         run: cp .env.testing .env
+      - name: echo id
+        run: echo id
       - name: Add variables to .env file
         run: |
           echo "INFORETRIEVAL_SERVICE=dummy" >> .env
           echo "EMAIL_SERVICE=dummy" >> .env
           echo "SMS_SERVICE=dummy" >> .env
+          echo "WWWUSER=?" >> .env
+          echo "WWWGROUP=20" >> .env
       - name: Fill postgres credentials
         run: |
+          sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=pgsql/g' .env
           sed -i 's/DB_DATABASE=laravel/DB_DATABASE=ci_db_test/g' .env
           sed -i 's/DB_USERNAME=root/DB_USERNAME=postgres/g' .env
           sed -i 's/DB_PASSWORD=/DB_PASSWORD=postgres/g' .env
+          sed -i 's/DB_PORT=3306/DB_PORT=5432/g' .env
       - name: Copy clients.json
         run: cp clients.json.example clients.json
       - name: Generate JWT key
