--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -59,14 +59,16 @@ jobs:
       - name: use .env.testing
         run: cp .env.testing .env
       - name: echo id
-        run: id -u
+        run: echo "USER_ID="$(id -u)"" >> $GITHUB_ENV
       - name: Add variables to .env file
         run: |
           echo "INFORETRIEVAL_SERVICE=dummy" >> .env
           echo "EMAIL_SERVICE=dummy" >> .env
           echo "SMS_SERVICE=dummy" >> .env
-          echo "WWWUSER=?" >> .env
+          echo "WWWUSER=${{ env.USER_ID }}" >> .env
           echo "WWWGROUP=20" >> .env
+      - name: echo .env
+        run: cat .env
       - name: Fill postgres credentials
         run: |
           sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=pgsql/g' .env
