--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -74,7 +74,8 @@ jobs:
       - name: Fill postgres credentials
         run: |
           sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=pgsql/g' .env
-          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=pap_db/g' .env
+          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=pap/g' .env
+          sed -i 's/DB_HOST=127.0.0.1/DB_HOST=pap_db/g' .env
           sed -i 's/DB_USERNAME=root/DB_USERNAME=postgres/g' .env
           sed -i 's/DB_PASSWORD=/DB_PASSWORD=postgres/g' .env
           sed -i 's/DB_PORT=3306/DB_PORT=5432/g' .env
