final final final final final fix

--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Seed DB
         run: docker-compose run pap php artisan migrate:fresh --seed
       - name: logfile permissions
-        run: chmod 600 storage/logs/laravel.log
+        run: chmod 755 storage/logs
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
