--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -100,6 +100,7 @@ jobs:
           chmod 755 storage
           chmod 777 storage/logs
           chmod 777 storage/framework
+          chmod 777 storage/framework/sessions
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
