super final ultra

--- a/.github/workflows/ci-robot.yml
+++ b/.github/workflows/ci-robot.yml
@@ -102,6 +102,8 @@ jobs:
           chmod 777 storage/framework
           chmod 777 storage/framework/sessions
           chmod 777 secrets
+      - name: log secrets folder
+        run: ls -lah secrets
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
