--- a/.env.testing
+++ b/.env.testing
@@ -72,4 +72,5 @@ CMS_SIGN_X509_KEY=ssl/pap.localdev.key
 CMS_SIGN_X509_PASS=
 CMS_SIGN_X509_CHAIN=
 
-CORONACHECK_JWT_AUD=https://localhost:888/coronacheck/1.0/events
+CORONACHECK_JWT_AUD=https://localhost:888/coronacheck/1.0
+CORONACHECK_JWT_ISS=localhost
