--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Comma-separated list of proxy IPs, or "*" to trust all proxies
+TRUSTED_PROXIES=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
