--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "^9.2",
         "laravel/tinker": "^2.7",
         "messagebird/php-rest-api": "^3.0",
-        "minvws/laravel-crypto": "^1.3",
+        "minvws/laravel-crypto": "^2.0",
         "spatie/url": "^2.1"
     },
     "require-dev": {
@@ -61,7 +61,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+              "minvws/laravel-crypto"
+            ]
         }
     },
     "config": {
