Updated to laravel crypto 3.0

--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,6 @@ SMS_SERVICE=messagebird
 
 # Comma separated list of cors origins (for .well-known/* and /oidc/authorize paths)
 CORS_ORIGINS=
+
+# (or "native")
+CMS_VERIFY_SERVICE="process_spawn"
