--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UfV5HHu+EH7u12lEGuUHjxXOYi91NoV9vRehsnCu8TI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
