Allowing multiple certs for verification

--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ CORONACHECK_JWT_AUD=
 # time in seconds before JWT expires
 CORONACHECK_JWT_EXP=3600
 
-# Certs for verifying CMS signatures from yenlo (absolute paths)
+# Certs for verifying CMS signatures from yenlo (absolute paths), comma separated
 CMS_X509_CERT=
 CMS_X509_CHAIN=
 
