Allowing extra certs in jkws.json

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,10 @@ CORS_ORIGINS=
 
 # (or "native")
 CMS_VERIFY_SERVICE="process_spawn"
+
+# Cert and key for JWT signing
+JWT_CERT_PATH=secrets/cert.pem
+JWT_KEY_PATH=secrets/jwt.key
+
+# Comma separated list of additional JWKS certs
+JWKS_CERT_PATHS=
