--- a/.env.testing
+++ b/.env.testing
@@ -74,3 +74,7 @@ CMS_SIGN_X509_CHAIN=
 
 CORONACHECK_JWT_AUD=https://localhost:888/coronacheck/1.0
 CORONACHECK_JWT_ISS=localhost
+
+JWT_CERT_PATH=secrets/cert.pem
+JWT_KEY_PATH=secrets/jwt.key
+JWKS_CERT_PATHS=
