--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       run: vendor/bin/phpunit --printer \\Tests\\ResultFilePrinter --coverage-clover pap_php_clover.xml
     - name: 'Comment PR'
       uses: actions/github-script@v4
-      if: github.event_name == 'pull_request'
+      if: ${{ github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' }}
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         debug: true
