--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,13 +53,9 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature)
-      run: vendor/bin/phpunit --printer \\Tests\\ResultFilePrinter --coverage-clover pap_php_clover.xml
-    - name: 'Comment PR'
-      uses: actions/github-script@v6
-      if: ${{ github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' }}
+      run: vendor/bin/phpunit --log-junit=junit.xml --coverage-clover pap_php_clover.xml
+    - uses: EnricoMi/publish-unit-test-result-action@v2
+      if: github.actor != 'dependabot[bot]' && always()
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        debug: true
-        script: |
-          const script = require('.github/scripts/comment-updater.js');
-          script({github, context, core, filename:"phpunit.out"});
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        files: junit.xml
